some exam and auth stuff